Fix tags menu items positioning on mobile devices.

--- a/sources/stylesheets/general/_menus.scss
+++ b/sources/stylesheets/general/_menus.scss
@@ -108,9 +108,7 @@
 
 .menu-horizontal {
   > .menu-item {
-    @media screen and (min-width: $mobile + 1) {
-      display: inline-block;
-    }
+    display: inline-block;
   }
 }
 
